--- a/05 - Flex Panel Gallery/index-NATHAN.html
+++ b/05 - Flex Panel Gallery/index-NATHAN.html
@@ -26,6 +26,7 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display: flex; /* 将Panels变成一个flex container */
     }
 
     .panel {
@@ -43,6 +44,13 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      flex: 1; /* 使得每个元素平均分布在整个空间里 */
+      justify-content: center;
+      align-items: center;
+      /* 加上这俩似乎没啥区别 */
+      display: flex; /* 默认横着flex */
+      flex-direction: column;
+
     }
 
     .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -52,11 +60,23 @@
     .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
 
     /* Flex Children */
-    .panel > * {
+    .panel > * { /* TODO: 这是什么写法？ */
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      /* border: 1px solid red; */
+      /* 观察一下每个元素所在的块 */
+      flex: 1 0 auto; /* TODO: 这又是什么 */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      /* 又见面了 */
     }
+
+    .panel > *:first-child { transform: translateY(-100%); }
+    .panel.open-active > *:first-child { transform: translateY(0); }
+    .panel > *:last-child { transform: translateY(100%); }
+    .panel.open-active > *:last-child { transform: translateY(0); }
 
     .panel p {
       text-transform: uppercase;
@@ -71,6 +91,7 @@
 
     .panel.open {
       font-size: 40px;
+      flex: 5; /* 使在flex container中占5份比例 */
     }
 
   </style>
@@ -105,6 +126,28 @@
   </div>
 
   <script>
+    const panels = document.querySelectorAll(".panel");
+
+    function toggleOpen() {
+      // console.log(this);
+      this.classList.toggle("open");
+    };
+
+    // function toggleOpenActive() {
+    //   console.log(this);
+    //   this.classList.toggle("open-active");
+    // }
+    // 乍一看应该这样写，但观察this之后发现有两个transitionend事件，导致toggle了两次等于无效
+
+    function toggleOpenActive(e) { // 所以我们先传入一个事件
+      console.log(e.propertyName); // 观察一下事件都有哪些属性
+      if ( e.propertyName.includes("flex-grow")) { // TODO: includes()是啥方法
+        this.classList.toggle("open-active"); // 这里再用this
+      }
+    }
+
+    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
+    panels.forEach(panel => panel.addEventListener('transitionend', toggleOpenActive));
 
   </script>
 
